@@ -180,6 +180,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - ProvideX               Jeff Wilder
 - PureBasic              Gustavo Julio Fiorenza
 - Python                 Roberto Rossi
+- PyCon                  Benny Baumann
 - q/kdb+                 Ian Roddis
 - R / S+                 Ron Fredericks
 - Rails                  Moises Deniz
